# metuatlas_go2

./: CMakeLists.txt  Supervisor.cc  Supervisor.hh  localoverrides.toml  main.cc  robot.sh  sim.sh
include/control_modules/: MdlSit.hh
src/control_modules/: CMakeLists.txt  MdlSit.cc
